force-app/main/default/objects/Maintenance_Request__c/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>