force-app/main/default/objects/Maintenance_Request__c/fields/Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Technician</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>