force-app/main/default/objects/Maintenance_Request__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Corrective</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>