force-app/main/default/objects/Maintenance_Request__c/validationRules/Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),
ISBLANK(Completed_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date is required.</errorMessage>
</ValidationRule>