force-app/main/default/objects/Maintenance_Request__c/validationRules/Completed_Date_After_Reported_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date_After_Reported_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Reported_Date__c)),
NOT(ISBLANK(Completed_Date__c)),
Completed_Date__c &lt; Reported_Date__c
)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date cannot be before Reported Date.</errorMessage>
</ValidationRule>