force-app/main/default/objects/Maintenance_Request__c/validationRules/Technician_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Technician_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Completed&quot;),
ISBLANK(Technician_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Technician_Notes__c</errorDisplayField>
    <errorMessage>Technician Notes are mandatory before completing maintenance.</errorMessage>
</ValidationRule>